--- a/credential.json.sample
+++ b/credential.json.sample
@@ -2,6 +2,7 @@
     "accessToken": "put here your access token",
     "channelSecret": "put here your channel secret",
     "server": {
+        "port": 3000,
         "key":  "lets_encript.key",
         "cert": "lets_encript_fullchain.crt"
     }
