--- a/credential.json.sample
+++ b/credential.json.sample
@@ -1,8 +1,8 @@
 {
     "accessToken": "put here your access token",
     "channelSecret": "put here your channel secret",
-    "server": {
-        "port": 3000,
+    "port": 3000, 
+    "https": {
         "key":  "lets_encript.key",
         "cert": "lets_encript_fullchain.crt"
     }
