--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "http": "0.0.0",
     "https": "^1.0.0",
     "line-msg-api": "^1.0.17",
-    "superagent": "^2.3.0"
+    "superagent": "^2.3.0",
+    "uuid": "^3.0.1"
   }
 }
